@@ -537,8 +537,6 @@ enum : ImageIndex
 
     SPR_HEIGHT_MARKER_BASE = 5769,
 
-    SPR_6410 = 6410,
-
     SPR_PEEP_PICKUP_COUNT = 12,
     SPR_PEEP_PICKUP_GUEST_START = 6813,
     SPR_PEEP_PICKUP_HANDYMAN_START = 11289,
@@ -971,6 +969,8 @@ enum : ImageIndex
     SPR_G2_ARROW_UP,
     SPR_G2_ARROW_DOWN,
     SPR_G2_RELOAD,
+    SPR_G2_MAP_GEN_BTN,
+    SPR_G2_PEEP_SPAWN,
 
     SPR_G2_ICON_PALETTE_INVISIBLE,
     SPR_G2_ICON_PALETTE_INVISIBLE_PRESSED,
